--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Website</title>
+    <title>Portfolio Website</title>
     <link rel="stylesheet" href="styel.css">
 </head>
 <body>
     <header class="main-header">
-        <h1>Welcome to Random Web</h1>
+        <h1>Welcome to my Website</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#about">About</a>
@@ -58,3 +58,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
