--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </section>
     </main>
     <footer class="main-footer">
+        <h2>design by shubham shinde</h2>
         <p>&copy; 2025 Random Web. All rights reserved.</p>
         <p>Follow us on 
             <a href="#">Twitter</a> | 
@@ -58,4 +59,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
