--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="styel.css">
+      <link rel="icon" href="https://www.cynortech.in/assets/images/cynor.png" type="image/png">
 </head>
 <body>
     <header class="main-header">
@@ -59,5 +60,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
