--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="styel.css">
-      <link rel="icon" href="https://www.cynortech.in/assets/images/cynor.png" type="image/png">
+      <link rel="icon" href="https://images.unsplash.com/photo-1645554523470-9572846c4684?q=80&w=1074&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" type="image/png">
 </head>
 <body>
     <header class="main-header">
@@ -60,6 +60,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
